[metadata]
name = slackbot
version = 0.0.0
author = Astatine
author_email = astatine085@gmail.com
url = https://github.com/085astatine/slackbot

[options]
packages =
    slackbot
    slackbot.action
    slackbot.action.download
install_requires =
    pyyaml>=4.2b1
    requests>=2.20
    slackclient>=2.3.1
test_suite = test
